NOBUG: Fix broken static image on safari (#703)

--- a/src/gatsby/src/styles/footer.scss
+++ b/src/gatsby/src/styles/footer.scss
@@ -55,6 +55,12 @@
     }
   }
   .footer-logo {
+    &.gatsby-image-wrapper {
+      width: 164px;
+      @include media-breakpoint-up(md) {
+        width: 246px;
+      }
+    }
     img {
       height: 60px;
       margin-bottom: 1.5rem;
